# opie-cli

./: .testr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
opie_cli/osc/: osc_plugin.py
opie_cli/osc/v1/: plugin.py
opie_cli/tests/: test_opie_cli.py
