[metadata]
name = python-opie-cli
summary = OPIE: OpenStack Preemptible Instances Extensions
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.org/indigo-dc/opie-cli
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    opie_cli

[entry_points]

openstack.cli.extension =
    opie = opie_cli.osc.osc_plugin

openstack.opie.v1 =
    server_preemptible_create = opie_cli.osc.v1.plugin:CreatePlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = opie/locale
domain = opie

[update_catalog]
domain = opie
output_dir = opie/locale
input_file = opie/locale/opie.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = opie/locale/opie.pot
